# GAINS

./: .gitignore  README.md  config.py  main.py  pyproject.toml
controller/: image_controller.py  infer_controller.py  temp_dir.py  workflow.py  wsi_controller.py
model/ai_models/: nested_unet.py  unet.py
model/project/: __init__.py  image.py  project_file.py  tile.py
scripts/: convert_ui.py
state/: __init__.py  progress_info.py
state/commands/: __init__.py  image_commands.py
view/: main_window.py
view/ui/compiled/: main_window.py
view/ui/compiled/widgets/: image_item.py  progress_item.py
view/utils/: worker.py
view/widgets/: image_item.py  progress_item.py  viewer.py
